# TheWolf

./: .gitignore
Wolf3D/: .gitignore  build.gradle  gradle.properties  import-summary.txt  local.properties  settings.gradle
Wolf3D/app/: CMakeLists.txt  build.gradle
Wolf3D/app/src/main/: AndroidManifest.xml
Wolf3D/app/src/main/cpp/: globals.h  id_heads.h  jni_wolf.c  libwolf.android.mak  sd_comm.h  wl_draw.c  wl_main.c  wl_menu.c  wl_menu.h
Wolf3D/app/src/main/java/com/peterpan/wolfs3d/: App.kt  BaseActivity.kt  InitialActivity.kt  InstallActivity.kt  WolfActivity.java  WolfCircumModel.kt  WolfIntentProcessor.kt  WolfLauncher.java
Wolf3D/app/src/main/java/com/peterpan/wolfs3d/ui/: GameLoadingState.kt
Wolf3D/app/src/main/java/game/controller/: SNESController.java
Wolf3D/app/src/main/java/wolf/audio/: AudioClip.java  AudioManager.java  SoundNames.java
Wolf3D/app/src/main/java/wolf/jni/: Natives.java
Wolf3D/app/src/main/java/wolf/util/: DialogTool.java  LibraryLoader.java  ScanCodes.java  WolfTools.java
Wolf3D/app/src/main/res/layout/: wolf.xml
Wolf3D/app/src/main/res/layout-sw600dp/: wolf.xml
Wolf3D/app/src/main/res/values/: strings.xml
Wolf3D/gradle/: libs.versions.toml
Wolf3D/gradle/wrapper/: gradle-wrapper.properties
Wolf3D/native/: GameFAQs  Wolfenstein 3D (PC) FAQ by AWilliamson.htm  Wolfenstein 3-D Redux  Read Me.htm  cheats.txt
Wolf3D/native/gp2xwolf3d/: jni_wolf.c  wl_agent.c
